...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mbc-7R-J8n">
                                        <rect key="frame" x="0.0" y="0.0" width="352" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Dv5-6L-Jzd"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Get Movie List"/>
                                        <connections>
                                            <action selector="getMovieListButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Tnd-KR-IKj"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zbV-SC-y1T">
                                        <rect key="frame" x="0.0" y="50" width="352" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Get Empty List Button" label="Get Empty List Button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="TN7-ZJ-QdX"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Get Empty List"/>
                                        <connections>
                                            <action selector="getEmptyMovieListButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ALg-72-HF2"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" red="0.41436452959999998" green="0.41436452959999998" blue="0.41436452959999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yxG-zh-GNc">
                                                        <rect key="frame" x="0.0" y="91.5" width="314" height="20.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Track Price Label" label="Track Price Label"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" red="0.41436452959999998" green="0.41436452959999998" blue="0.41436452959999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
                                            </stackView>
...
