...
                    </imageView>
                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sds-at-RBJ">
                        <rect key="frame" x="10" y="15" width="225" height="89"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpJ-tQ-66h">
                                <rect key="frame" x="0.0" y="0.0" width="225" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="MovieNameLabel" label="MovieNameLabel"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX3-ED-tsE">
                                <rect key="frame" x="0.0" y="38" width="225" height="17"/>
...
